Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106003

remoteobjects does not checks for Declarative's private headers existance, but makes use of them

XMLWordPrintable

    • Linux/X11
    • cd67b4351e (qt/qtremoteobjects/dev) cd67b4351e (qt/tqtc-qtremoteobjects/dev) c6e828c3ec (qt/qtremoteobjects/6.3) c6e828c3ec (qt/tqtc-qtremoteobjects/6.3) 182e3b4d08 (qt/tqtc-qtremoteobjects/6.2) 7a15ca96fa (qt/qtremoteobjects/6.4)

      If remoteobjects is built on a clean chroot without declarative's private headers:

      registrations.cpp.o -c src/remoteobjectsqml/remoteobjectsqml_qmltyperegistrations.cpp
      In file included from include/QtRemoteObjectsQml/6.3.1/QtRemoteObjectsQml/private/qremoteobjectsqml_p.h:1,
                       from src/remoteobjectsqml/remoteobjectsqml_qmltyperegistrations.cpp:10:
      include/QtRemoteObjectsQml/6.3.1/QtRemoteObjectsQml/private/../../../../../../src/remoteobjectsqml/qremoteobjectsqml_p.h:49:10: fatal error: QtQml/private/qjsvalue_p.h: No such file or directory
         49 | #include <QtQml/private/qjsvalue_p.h>
            |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
      compilation terminated.
      

      As with other Qt submodules it should check that the private headers are there.

        For Gerrit Dashboard: QTBUG-106003
        # Subject Branch Project Status CR V

            bstottle Brett Stottlemyer
            lisandropm Lisandro Damián Nicanor Pérez Meyer
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: